# archons

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  babel.config.json  cspell.json  index.d.ts  index.js  jest.config.ts  package.json  pnpm-lock.yaml  simple.js  tsconfig.json
.cargo/: config.toml
.changeset/: beige-zoos-matter.md  big-numbers-help.md  brave-horses-grow.md  brown-wombats-roll.md  calm-socks-sleep.md  cuddly-brooms-agree.md  cuddly-kiwis-greet.md  curly-crews-pull.md  curly-planes-lie.md  cyan-goats-pretend.md  eager-chefs-rhyme.md  eleven-deers-explain.md  eleven-points-carry.md  empty-jars-cough.md  fair-mangos-bow.md  famous-seas-provide.md  four-wasps-heal.md  fuzzy-windows-accept.md  gold-bananas-taste.md  gorgeous-olives-glow.md  green-cherries-yawn.md  healthy-carpets-learn.md  hip-walls-remain.md  kind-owls-grab.md  modern-boxes-deliver.md  moody-bottles-float.md  nasty-bugs-jog.md  new-candles-tickle.md  orange-bugs-rest.md  perfect-fishes-trade.md  poor-cats-grow.md  poor-roses-cry.md  rotten-carrots-check.md  rude-chairs-brake.md  selfish-avocados-peel.md  serious-apples-hang.md  silver-grapes-cheat.md  small-ducks-type.md  smooth-turkeys-develop.md  solid-results-lie.md  (+11 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
__test__/: exclusive.spec.ts  global.spec.ts  index.spec.ts  num_args.spec.ts  options.spec.ts  subcommand.spec.ts  test.sh
benchmark/: bench.ts
examples/: exclusive.cts  global.cts  inquire.cts  no_version.cts  num_args.cts  package.json  positional_required.cts  progressbar.cts  simple.cts  tsconfig.json
scripts/: bump.mjs  watch.mjs
src/: command.rs  inquire.rs  lib.rs  progressbar.rs  resolver.rs  types.rs  utils.rs
(+38 files in other folders)
