[package]
authors = ["苏向夜 <fu050409@163.com>"]
edition = "2021"
name    = "archons"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
clap        = "4.5.13"
napi        = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
