[package]
authors = ["苏向夜 <fu050409@163.com>"]
edition = "2021"
name    = "archons"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
clap        = "4.5.24"
indicatif   = "0.18.0"
inquire     = "0.7.5"
napi        = "3"
napi-derive = "3"
rustc-hash  = "2.1.0"
thiserror   = "2.0.10"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units    = 1
debug-assertions = false
lto              = true
opt-level        = 3
panic            = "abort"
strip            = true
